[gd_scene load_steps=29 format=3 uid="uid://cyn86eiscsgr8"]

[ext_resource type="Script" path="res://enemies/neon_bot_enemy_2.gd" id="1_thohs"]
[ext_resource type="Texture2D" uid="uid://cr28y0bd8l5wm" path="res://effects/Free Smoke Fx  Pixel 05.png" id="2_lcbpt"]
[ext_resource type="Texture2D" uid="uid://cy5np5fpcpacj" path="res://enemies/sprPopcornEnemy.png" id="3_y6vow"]
[ext_resource type="AudioStream" uid="uid://dkkc6n5od4tfa" path="res://audio/ESM_Retro_Game_Classic_Explosion_6_8_Bit_Arcade_80s_Weapon_Attack.wav" id="4_pxk5t"]
[ext_resource type="FontFile" uid="uid://bf0q0pmkhfebo" path="res://fonts/PixelTandysoft-0rJG.ttf" id="5_04vlc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_epbo2"]
atlas = ExtResource("2_lcbpt")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_njquf"]
atlas = ExtResource("2_lcbpt")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk2ni"]
atlas = ExtResource("2_lcbpt")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hgj6"]
atlas = ExtResource("2_lcbpt")
region = Rect2(192, 384, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gdsxc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epbo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njquf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk2ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hgj6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kc8g1"]
atlas = ExtResource("3_y6vow")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy6n3"]
atlas = ExtResource("3_y6vow")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_swyk6"]
atlas = ExtResource("3_y6vow")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pld5e"]
atlas = ExtResource("3_y6vow")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mjcs"]
atlas = ExtResource("3_y6vow")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwhip"]
atlas = ExtResource("3_y6vow")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_42gou"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc8g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy6n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swyk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pld5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mjcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwhip")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_43in4"]
radius = 13.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6sn1u"]
atlas = ExtResource("2_lcbpt")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rr3w"]
atlas = ExtResource("2_lcbpt")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_407vi"]
atlas = ExtResource("2_lcbpt")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm3yl"]
atlas = ExtResource("2_lcbpt")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qeco"]
atlas = ExtResource("2_lcbpt")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_504hf"]
atlas = ExtResource("2_lcbpt")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyg77"]
atlas = ExtResource("2_lcbpt")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33n08"]
atlas = ExtResource("2_lcbpt")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfjqo"]
atlas = ExtResource("2_lcbpt")
region = Rect2(512, 448, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_oidvu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sn1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rr3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_407vi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm3yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qeco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_504hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyg77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33n08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfjqo")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="NeonBotEnemy2" type="Area2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_thohs")

[node name="Timer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.828959, 0.668295, 0.0918574, 1)
position = Vector2(-11.394, -0.41)
scale = Vector2(0.456438, 0.231563)
sprite_frames = SubResource("SpriteFrames_gdsxc")
frame_progress = 0.596807

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 8.88178e-16)
rotation = 4.71239
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_42gou")
frame_progress = 0.915974

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_43in4")

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
visible = false
self_modulate = Color(1, 0.302668, 0.846189, 1)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_oidvu")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_pxk5t")
volume_db = -5.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -39.0
offset_top = -34.0
offset_right = 2461.0
offset_bottom = 899.0
scale = Vector2(0.03, 0.03)
theme_override_fonts/normal_font = ExtResource("5_04vlc")
theme_override_font_sizes/normal_font_size = 250
bbcode_enabled = true
text = "[center][rainbow]+15 Points"

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D3" to="." method="_on_animated_sprite_2d_3_animation_finished"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
